--- a/jamovi/brawsim.r.yaml
+++ b/jamovi/brawsim.r.yaml
@@ -40,8 +40,8 @@ items:
       - MetaAnalysisPrior
       - MetaAnalysisBias
       - MetaAnalysisNulls
-      - goBack
-      - goForwards
+      - simGoBack
+      - simGoForwards
 
     - name: simReport
       type: Html
