--- a/jamovi/brawsim.a.yaml
+++ b/jamovi/brawsim.a.yaml
@@ -2337,7 +2337,7 @@ options:
     - name: meta2SampleSplits
       title: sets
       type: Number
-      default: 1
+      default: 16
 
     - name: meta2SampleBudget
       title: Budget
@@ -2363,7 +2363,7 @@ options:
     - name: meta3SampleSize
       title: 'Sample size' 
       type: Number
-      default: 50
+      default: 42
 
     - name: meta3World
       title: 'world'
@@ -2428,7 +2428,7 @@ options:
     - name: Meta4SampleSize
       title: 'Sample size' 
       type: Number
-      default: 50
+      default: 42
 
 
     - name: Meta4World
@@ -2456,7 +2456,7 @@ options:
           title: no
         - name: yes
           title: yes
-      default: no
+      default: yes
 
     - name: Meta4RepPower
       title: power
